# family-tree-converter

./: .gitignore  pyproject.toml
family_tree_converter/: checks.py  cli.py  golden.py  merge.py  reader.py  validate.py  writer.py
scripts/: profile.py  update_golden.py
tests/: test_brcstl_integration.py  test_castl_integration.py  test_checks.py  test_dates.py  test_golden.py  test_hcks_integration.py  test_jdj_integration.py  test_merge.py  test_reader_integration.py  test_stifftaylor_integration.py  test_validate.py  test_writer.py
