[project]
name = "family-tree-converter"
version = "0.1.0"
description = "Convert custom Excel family tree spreadsheet to GEDCOM format"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1",
    "xlrd>=2.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
convert = "family_tree_converter.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
